[project]
name = "zyonsrs3necrogauge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss>=10.0.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pygame>=2.6.1",
    "pyinstaller>=6.12.0",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2",
]
